# ZenoNET

./: README.md  TODO.md
ZenoNet/: CMakeLists.txt  README.md
ZenoNet/examples/: chat_example.c  game_example.cpp
ZenoNet/include/: zenonet.h
ZenoNet/src/: packet.c  room.c
src/: client.c  connection.c  server.c  zenonet.c  zenonet_cpp.cpp
tests/: test_basic.c
zenonet_elixir/: mix.exs
zenonet_elixir/config/: config.exs
zenonet_elixir/examples/: client_example.exs  server_example.exs
zenonet_elixir/lib/: zenonet_elixir.ex
zenonet_elixir/lib/zenonet_elixir/: application.ex  client.ex  native.ex  server.ex
zenonet_elixir/native/: Cargo.toml  build.rs
zenonet_elixir/native/src/: lib.rs
zenonet_elixir/test/: zenonet_elixir_test.exs
